<?xml version="1.0"?>
<package format="3">
  <name>blueboat_gcs</name>
  <version>0.0.1</version>
  <description>Ground control station package for BlueBoat at CIRTESU.</description>

  <maintainer email="al427817@uji.es">Mario Lopez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>